{{$NEXT}}

1.302038  2016-07-05 07:00:18-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix broken MANIFEST.SKIP entries (#689)

1.302037  2016-07-04 10:09:00-07:00 America/Los_Angeles

    - No changes from trial

1.302036  2016-07-03 11:52:45-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Restore PerlIO layer cloning on STDERR and STDOUT

1.302035  2016-06-27 08:55:55-07:00 America/Los_Angeles

    - No changes since TRIAL release

1.302034  2016-06-25 13:51:00-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix some breakage info (Thanks Dolman!)
    - POD Fixes (Thanks cpansprout!)

1.302033  2016-06-24 05:56:54-07:00 America/Los_Angeles

    - No changes from last trial release

1.302032  2016-06-22 11:30:46-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix nested TODO handling of Diags (#684)

1.302031  2016-06-21 09:51:27-07:00 America/Los_Angeles

    - Remove carp from dep list #682

1.302030  2016-06-18 19:02:55-07:00 America/Los_Angeles

    - No changes from last DEV release

1.302029  2016-06-17 06:56:54-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Properly skip thread test when threads are broken

1.302028  2016-06-16 19:21:58-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add 'inherit_trace' param to run_subtest

1.302027  2016-06-15 09:42:32-07:00 America/Los_Angeles (TRIAL RELEASE)

    - use pre_filter instead of filter for TODO in Test::Builder (Fix $683)
    - Fix typos in transitions doc (#681)

1.302026  2016-06-07 07:53:30-07:00 America/Los_Angeles

    - No Changes from 1.302025-TRIAL

1.302025  2016-06-06 22:38:12-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make sure enabling culling/shm sets pid and tid (Fix #679)

1.302024  2016-06-02 20:27:35-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add Generic event type

1.302023  2016-06-02 08:09:54-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Do not fail if Test2::API::Breakage cannot load (rare 5.10.0 issue)
    - Potential fix for t/Legacy/Regression/637.t